--- a/src/containers/Home/ReleaseNotes/release-notes-en.mdx
+++ b/src/containers/Home/ReleaseNotes/release-notes-en.mdx
@@ -1,99 +1,164 @@
+#### Versioon 5.1.35 (28.02.2022)
+
+- Added visual vocabulary help exercise
+
 #### Versioon 5.1.34 (05.02.2022)
+
 - Changes based on the feedback
   - Added confirmation when manually stopping exercise
   - Added option to hide stopwatch in exercise options
   - Fixed typos in reading texts
+
 #### Versioon 5.1.33 (26.01.2022)
+
 - Minor changes
+
 #### Version 5.1.32 (07.08.2021)
+
 - Added Estonian tetragrams modification to concentration exercise
+
 #### Version 5.1.31 (01.08.2021)
+
 - Improvements to vertical reading and moving text exercises
+
 #### Version 5.1.30 (28.04.2021)
+
 - Added vertical reading and moving text exercises
+
 #### Version 5.1.29 (07.03.2021)
+
 - Added word groups "blurry" modification
+
 #### Version 5.1.28 (14.02.2021)
+
 - Added the possibility to filter out your own text exercise in statistics
 - Added the possibility to filter statistics by first reading attempt only
+
 #### Version 5.1.27 (08.02.2021)
+
 - Optimiziation of user statistics loading
 - Added the possibility to repeat the reading exercise more conveniently
 - Highlight user column in the group statistics distribution chart
+
 #### Version 5.1.26 (03.01.2021)
+
 - Added frequency distribution chart when clicking on the group statistics value
+
 #### Version 5.1.25 (06.12.2020)
+
 - Added page switching for reading exercises
 - Added option to filter unread texts
 - Various design additions
+
 #### Version 5.1.24 (01.11.2020)
+
 - Added additional explanations on the achievements page
 - Balancing weekly and monthly achievements
+
 #### Version 5.1.23 (14.09.2020)
+
 - Added achievements, feedback welcome!
+
 #### Version 5.1.22 (21.06.2020)
+
 - Concentration exercise statistics additions
 - Additions to group exercises statistics
+
 #### Version 5.1.21 (11.01.2020)
+
 - Replacing word group exercise fixation with reading speed
 - Minor improvements to word group exercise
+
 #### Version 5.1.20 (31.12.2019)
+
 - Adding a solution to the reading speed problem
 - Streamlining reading exercises
 - Make text clearer and sharper on some screens
+
 #### Version 5.1.15 (02.06.2019)
+
 - Additions to the end of the test
+
 #### Version 5.1.14 (02.04.2019)
+
 - Increase the maximum reading speed to 700 words per minute
 - Added temporary fix for read speed issue
+
 #### Version 5.1.13 (25.02.2019)
+
 - Updates to the upgrade process
+
 #### Version 5.1.12 (06.02.2019)
+
 - Schulte table size selection
 - Update the user manual
+
 #### Version 5.1.11 (01.01.2019)
+
 - Evaluation of blank exercise answers
 - Display of added statistics as a graph polynomial
+
 #### Version 5.1.10 (02.12.2018)
+
 - Additions to group statistics
 - Bug fixes and testing
+
 #### Version 5.1.9 (12.11.2018)
+
 - Added statistics period selection
 - Group statistics query speed optimization
+
 #### Version 5.1.8 (05.11.2018)
+
 - Added group averages statistics
 - Corrections to text questions and answers
 - Bug fixes and testing
+
 #### Version 5.1.7 (22.10.2018)
+
 - Additions to the selection of texts
 - Corrections to statistical calculations
 - Automatic update of application data
 - Bug fixes
+
 #### Version 5.1.6 (08.10.2018)
+
 - Save exercise settings
 - Corrections to errors in statistics
+
 #### Version 5.1.5 (01.10.2018)
+
 - Additions to user profiles
 - Bug fixes
+
 #### Version 5.1.4 (24.09.2018)
+
 - Added option to report text issues
 - Numerous reading texts added (many thanks to the editor!)
 - Added automatic error reporting
 - Application front page additions
 - Minor design changes
 - Bug fixes
+
 #### Version 5.1.3 (17.09.2018)
+
 - Assessing the interest of the text
 - Corrections to sentence wording
 - Bug fixes
+
 #### Version 5.1.2 (29.08.2018)
+
 - Improvements in the assessment of text complexity
 - Option added to the server [to assess the abstraction of text] (http://prog.keeleressursid.ee/abstraktsus/)
 - Bug fixes
+
 #### Version 5.1.1 (30.06.2018)
+
 - Add animations to the schedule
 - Adding a sequence number scale
+
 #### Version 5.1 (07.06.2018)
+
 - Added charts for acquisition speed and level
 - Bug fixes
 - Introductory video
